[project]
name = "fastapi-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "langchain-cerebras>=0.5.0",
    "langchain-mistralai>=0.2.10",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]
